--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
+website/
+│── index.html
+│── css/
+│   └── style.css (opsional)
+└── images/
+    └── foto.jpg (opsional)
 <!DOCTYPE html>
 <html lang="id">
 <head>
